# real3d

./: Cargo.toml  README.md  build.rs  tetris_save.json
content/: block-blue.mtl  block-cyan.mtl  block-green.mtl  block-magenta.mtl  block-red.mtl  block-yellow.mtl  block.blend  block.blend1  block.mtl  cube-working.mtl  floor.blend  floor.mtl  index.html  other_floor.mtl
src/: anim.rs  assets.rs  audio.rs  camera.rs  camera_control.rs  collision.rs  events.rs  geom.rs  grid.rs  lib.rs  lights.rs  main.rs  model.rs  network.rs  render.rs  save.rs  serialization.rs  server.py  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shader_bones.vert  shader_bones.vert.spv  texture.rs
