[package]
name = "tetris3d"
version = "0.1.0"
authors = ["Jerie Wang and Cassie Wang"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
futures = "0.3"
image = "0.23"
log = "0.4"
tobj = "2.0"
wgpu = "0.7.1"
kira = "0.5.1"
notify = "4.0.15"
env_logger = "0.7"
rand = "0.8.3"
winit = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.gltf]
version="0.15.2"
features=["utils","import","names"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
shaderc = "0.7"
